# rf-bitkit

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
docs/: ALGORITHMS.md
src/: crc.rs  lib.rs  linalg.rs  main.rs  proto.rs
tests/: test_bits_crc12umts.txt  test_bits_crc5usb.txt  test_bits_crc6.txt  test_bits_crc7mmc.txt  test_bits_crc8bt.txt  test_bits_interlaken.txt  test_bits_interlaken_preamble.txt
