[package]
name = "rf-bitkit"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A collection of analysis functions for reverse engineering RF protocols"
repository = "https://github.com/emclrk/rf-bitkit"
readme = "README.md"
keywords = ["rf", "sdr", "protocol", "bitstream", "reverse-engineering"]
categories = ["command-line-utilities", "algorithms"]

[[bin]]
name = "bitkit"
path = "src/main.rs"
doc = false

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
quick-xml = { version = "0.41.0", features = ["serialize"] }
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
